--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
     }
 
     .container {
-      max-width: fit-content;
+      /*max-width: fit-content;*/
+      padding: 0.5rem;
     }
 
     .bands {
